--- a/Getout/index.html
+++ b/Getout/index.html
@@ -15,7 +15,7 @@
     <hr>
 
     
-    <img id="pic" src="/Getout/IMG/downlo2ad.jpg">
+    <img id="pic" src="/Getout/IMG/images.jpg">
     <div id="bg">
         
         <button id="Reset" class="buttonfont"> Reset </button>
